--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 	"dependencies": {
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
-		"react-router-dom": "^6.3.0"
+		"react-router-dom": "^6.3.0",
+		"vite-plugin-svgr": "^2.2.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.0",
@@ -19,4 +20,3 @@
 		"vite": "^2.9.9"
 	}
 }
-
